--- a/Profiles/app/src/main/res/layout/fragment_address_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_address_profile.xml
@@ -191,7 +191,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
                     android:hint="Código Postal"
-                    android:inputType="textPostalAddress"
+                    android:inputType="number"
                     android:maxLength="5"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
