--- a/Profiles/app/src/main/res/layout/fragment_electoral_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_electoral_profile.xml
@@ -112,6 +112,7 @@
                     android:background="@drawable/shape_form"
                     android:hint="Secc. Elec."
                     android:inputType="number"
+                    android:maxLength="4"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
@@ -127,8 +128,8 @@
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/shape_form"
+                    android:editable="false"
                     android:hint="Dist. Local."
-                    android:inputType="number"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
