--- a/Profiles/app/src/main/res/layout/fragment_personal_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_personal_profile.xml
@@ -168,11 +168,10 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
+                    android:editable="false"
                     android:hint="Nacionalidad"
-                    android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
-                    android:singleLine="true"
                     android:textColor="@color/colorPrimaryDark"
                     android:textColorHint="@color/colorPrimaryDark"
                     android:textSize="15sp" />
