--- a/Profiles/app/src/main/res/menu/navigation_drawer.xml
+++ b/Profiles/app/src/main/res/menu/navigation_drawer.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="100"
         android:title="@string/action_sync"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:title="@string/default_logout"
+        app:showAsAction="never" />
 </menu>
