--- a/Profiles/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/Profiles/app/src/main/res/layout/content_navigation_drawer.xml
@@ -11,6 +11,6 @@
     <FrameLayout
         android:id="@+id/profiles_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"/>
 </RelativeLayout>
