--- a/Profiles/app/src/main/res/menu/navigation_drawer.xml
+++ b/Profiles/app/src/main/res/menu/navigation_drawer.xml
@@ -8,6 +8,11 @@
         app:showAsAction="never"
         android:visible="false"/>
     <item
+        android:id="@+id/search_profile"
+        android:orderInCategory="100"
+        android:title="@string/default_search_profile"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_sync"
         android:orderInCategory="100"
         android:title="@string/action_sync"
