--- a/Profiles/app/src/main/res/layout/activity_login.xml
+++ b/Profiles/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentTop="true"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
