--- a/Profiles/app/src/main/res/layout/fragment_search_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_search_profile.xml
@@ -28,7 +28,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/emptyProfile"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 </FrameLayout>
