--- a/Profiles/app/src/main/res/layout/fragment_search_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_search_profile.xml
@@ -25,10 +25,45 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <!--
         <android.support.v7.widget.RecyclerView
             android:id="@+id/emptyProfile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+        -->
+
+        <LinearLayout
+            android:id="@+id/emptySearch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/emptyImg"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:background="@drawable/profiles_launcher" />
+
+            <TextView
+                android:id="@+id/emptyTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="SEARCH TITLE"
+                android:textAlignment="center"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/emptyMsg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="SEARCH MESSAGE"
+                android:textAlignment="center"
+                android:textSize="20sp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 </FrameLayout>
