--- a/Profiles/app/src/main/res/layout/fragment_personal_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_personal_profile.xml
@@ -24,11 +24,14 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="20dp"
                 android:paddingTop="15dp">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <TextView
+                        android:id="@+id/personalProfileTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Registar Usuario"
@@ -44,11 +47,12 @@
                         android:textSize="25sp"
                         android:textStyle="bold" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
                     android:gravity="end">
 
                     <Button
@@ -56,7 +60,8 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_marginLeft="8dp"
-                        android:background="@mipmap/ic_close_black" />
+                        android:background="@mipmap/ic_arrow_back_black"
+                        android:visibility="invisible" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -187,8 +192,8 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shape_form"
-                    android:editable="false"
                     android:hint="Nacionalidad"
+                    android:text="Mexicana"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:textColor="@color/colorPrimaryDark"
