--- a/Profiles/app/src/main/res/layout/fragment_professional_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_professional_profile.xml
@@ -19,25 +19,49 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:paddingLeft="10dp"
+                android:paddingRight="20dp"
                 android:paddingTop="15dp">
 
-                <TextView
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Registar Usuario"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="15sp"
-                    android:textStyle="normal" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Datos Laborales"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/professionalProfileTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Registar Usuario"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="15sp"
+                        android:textStyle="normal" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Datos Laborales"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:gravity="end">
+
+                    <Button
+                        android:id="@+id/professionalExit"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="8dp"
+                        android:background="@mipmap/ic_arrow_back_black"
+                        android:visibility="invisible" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -54,14 +78,14 @@
                     android:layout_height="40dp"
                     android:background="@drawable/shape_form"
                     android:hint="Número de Seguro Social"
+                    android:imeOptions="actionDone"
                     android:inputType="textNoSuggestions"
                     android:maxLines="1"
                     android:paddingLeft="20dp"
                     android:singleLine="true"
                     android:textColor="@color/colorPrimaryDark"
                     android:textColorHint="@color/colorPrimaryDark"
-                    android:textSize="15sp"
-                    android:imeOptions="actionDone"/>
+                    android:textSize="15sp" />
 
                 <Spinner
                     android:id="@+id/level"
@@ -146,13 +170,13 @@
                     android:background="@drawable/shape_form"
                     android:gravity="top"
                     android:hint="Resumen Ejecutivo"
+                    android:imeOptions="actionDone"
                     android:inputType="textMultiLine"
                     android:paddingLeft="20dp"
                     android:paddingTop="20dp"
                     android:textColor="@color/colorPrimaryDark"
                     android:textColorHint="@color/colorPrimaryDark"
-                    android:textSize="15sp"
-                    android:imeOptions="actionDone"/>
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <android.support.v4.widget.Space
