--- a/Profiles/app/src/main/res/layout/fragment_personal_profile.xml
+++ b/Profiles/app/src/main/res/layout/fragment_personal_profile.xml
@@ -75,17 +75,16 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="140dp"
                     android:orientation="vertical"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:paddingRight="20dp">
                     <ImageView
                         android:id="@+id/profilePicture"
-                        android:layout_width="180dp"
-                        android:layout_height="140dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:scaleType="centerInside"
                         android:background="@mipmap/ic_launcher"
                         />
                 </LinearLayout>
